Automatically backed up by Learn

--- a/css/cleanup.css
+++ b/css/cleanup.css
@@ -21,6 +21,6 @@ div#wall div.parent #tag-5.slick{
   display: none;
 }
 
-div#wall div.parent div:last-child div#tag-6{
+bodydiv#wall div.parent div:last-child div#tag-6{
   display: none;
 }
