--- a/css/cleanup.css
+++ b/css/cleanup.css
@@ -25,4 +25,4 @@ body div#wall div.parent div:last-child div#tag-6{
   display: none;
 }
 
-body div#wall div.parent div > 
+body div#wall div.parent div > #tag-7.slick
