--- a/css/cleanup.css
+++ b/css/cleanup.css
@@ -1,1 +1,27 @@
-/* write your override styles here */
+#wall .tag-1 {
+  display: none !important;
+}
+
+#wall #tag-2 {
+  display: none !important;
+}
+
+#wall #tag-3.slick {
+  display: none !important;
+}
+
+#wall #tag-4 {
+  display: none !important;
+}
+
+#wall .parent #tag-5.slick {
+  display: none !important;
+}
+
+#wall .parent #tag-6 {
+  display: none !important;
+}
+
+#wall .parent #tag-7.slick {
+  display: none !important;
+}
